# Trim88eqPlugin

./: CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
Source/: BandControls.cpp  BandControls.h  ControlKnob.cpp  ControlKnob.h  EQDisplay.cpp  EQDisplay.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/: App.tsx  index.css
src/components/: BandControls.tsx  CRTOverlay.tsx  ControlKnob.tsx  EQDisplay.tsx  Logo.tsx  PresetSelector.tsx
src/imports/: Group18.tsx  ReaEqExpanded.tsx  svg-p67mrg82w5.ts  svg-p77b7orrvu.ts
